app-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: alb-deployment
  name: alb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alb-app
    spec:
      containers:
        - name: helloworld
          image: bjgomes/helloworld:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
